fix: fix gap

--- a/src/components/virtual-keyboard/style.scss
+++ b/src/components/virtual-keyboard/style.scss
@@ -117,7 +117,7 @@
     &--split {
       background: none;
       flex-direction: column;
-      gap: 3px;
+      gap: 2px;
 
       &:hover {
         background: none;
